--- a/pytorch-sentiment-analysis-test.ipynb
+++ b/pytorch-sentiment-analysis-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "4           i think mi bf is cheating on me!!!   ...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,11 +148,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "nlp = spacy.load('en', disable=['parser', 'tagger', 'ner'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1578612/1578612 [00:00<00:00, 2426927.88it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['SentimentText'] = tqdm(df['SentimentText'].apply(lambda x: x.strip()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter"
    ]
   },
   {
@@ -164,33 +190,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1578612/1578612 [00:00<00:00, 2047692.42it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "df['SentimentText'] = tqdm(df['SentimentText'].apply(lambda x: x.strip()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import Counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1578612/1578612 [04:58<00:00, 5295.32it/s]\n"
+      "100%|██████████| 1578612/1578612 [04:22<00:00, 6021.66it/s]\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "773040"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "[Text(0,0.5,'Frequency'), Text(0.5,0,'Tweet Length')]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "4  [2, 93, 1815, 1342, 14, 5521, 23, 24, 3, 3, 3,...  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,13 +520,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
     "class VectorizeData(Dataset):\n",
     "    def __init__(self, df_path, max_len=10):\n",
+    "        self.max_len = max_len\n",
     "        self.df = pd.read_csv(df_path, error_bad_lines=False)\n",
+    "        self.df['SentimentText'] = self.df.SentimentText.apply(lambda x: x.strip())\n",
+    "        self.df['sentimentidx'] = self.df.SentimentText.apply(indexer)\n",
+    "        self.df['lengths'] = self.df.sentimentidx.apply(lambda x: self.max_len if len(x) > self.max_len else len(x))\n",
+    "        self.df['sentimentpadded'] = self.df.sentimentidx.apply(pad_data)\n",
     "        \n",
     "    def __len__(self):\n",
     "        return self.df.shape[0]\n",
@@ -540,27 +545,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 150,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "b'Skipping line 8836: expected 4 fields, saw 5\\n'\n",
+      "b'Skipping line 535882: expected 4 fields, saw 7\\n'\n"
+     ]
+    }
+   ],
    "source": [
-    "dataset = VectorizeData('data/sentiment-analysis-prepared.csv')"
+    "dataset = VectorizeData('data/sentiment-analysis.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0    [    14     26    132     18     10 241549    ...\n",
-      "1    [   2  272    7   90  812 1274   16    0    0 ...\n",
-      "2    [ 247   82  217 4573 1012    0    0    0    0 ...\n",
-      "3    [    37 241550      4      2     73    440    ...\n",
-      "4    [   2   93 1815 1342   14 5521   23   24    3 ...\n",
+      "(0    [14, 26, 132, 18, 10, 241549, 266, 6621, 0, 0,...\n",
+      "1    [2, 272, 7, 90, 812, 1274, 16, 0, 0, 0, 0, 0, ...\n",
+      "2    [247, 82, 217, 4573, 1012, 0, 0, 0, 0, 0, 0, 0...\n",
+      "3    [37, 241550, 4, 2, 73, 440, 6, 2, 73, 1454, 55...\n",
+      "4    [2, 93, 1815, 1342, 14, 5521, 23, 24, 3, 3, 3,...\n",
       "Name: sentimentpadded, dtype: object, 0    0\n",
       "1    0\n",
       "2    1\n",
@@ -569,8 +583,8 @@
       "Name: Sentiment, dtype: int64, 0     8\n",
       "1     7\n",
       "2     5\n",
-      "3    16\n",
-      "4    13\n",
+      "3    10\n",
+      "4    10\n",
       "Name: lengths, dtype: int64)\n"
      ]
     }
@@ -581,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,26 +623,26 @@
     "        self.out = nn.Linear(self.num_hidden, self.num_out)\n",
     "        \n",
     "    def forward(self, sequence, lengths):\n",
-    "        batch_size = sequence.size(16) \n",
+    "        batch_size = sequence.size(1) \n",
     "\n",
     "        self.h = self.init_hidden(batch_size)\n",
     "\n",
     "        embeddings = self.embedding(sequence)\n",
     "        embeddings = pack_padded_sequence(embeddings, lengths) \n",
     "        \n",
-    "        gru_out, self.h = self.gru(embs, self.h)\n",
+    "        gru_out, self.h = self.gru(embeddings, self.h)\n",
     "        gru_out, lengths = pad_packed_sequence(gru_out)\n",
     "        \n",
     "        output = self.out(self.h[-1])\n",
     "        return F.log_softmax(output, dim=-1)\n",
     "    \n",
     "    def init_hidden(self, batch_size):\n",
-    "        return Variable(torch.zeros((1, batch_size, self.n_hidden)))"
+    "        return Variable(torch.zeros((1, batch_size, self.num_hidden)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +664,7 @@
        ")"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,22 +675,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sort_batch(X, y, lengths):\n",
-    "    lengths, index = lengths.sort(dim=0, descending=True)\n",
+    "    lengths, idx = lengths.sort(dim=0, descending=True)\n",
     "    \n",
-    "    X = X[index]\n",
-    "    y = y[index]\n",
+    "    X = X[idx]\n",
+    "    y = y[idx]\n",
     "    \n",
     "    return X.transpose(0,1), y, lengths "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,41 +725,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs, ys, lens =  next(iterator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "only integer tensors of a single element can be converted to an index",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-79-e31f77f97fe6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mxs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlens\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mxs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msort_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_gru\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlens\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-75-84678314c29e>\u001b[0m in \u001b[0;36msort_batch\u001b[0;34m(X, y, lengths)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mlengths\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlengths\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdescending\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: only integer tensors of a single element can be converted to an index"
+     "data": {
+      "text/plain": [
+       "tensor([ 1.4000e+01,  2.6000e+01,  1.3200e+02,  1.8000e+01,  1.0000e+01,\n",
+       "         2.4155e+05,  2.6600e+02,  6.6210e+03,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00])"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(tensor([ 10,  10,  10,  10,  10,  10,  10,   9,   8,   7,   7,   7,\n",
+      "          6,   6,   5,   4]), tensor([  8,   7,  11,   9,  15,   4,   3,  13,   0,  14,   5,   1,\n",
+      "         12,  10,   2,   6]))\n"
      ]
     }
    ],
    "source": [
-    "xs, ys, lens =  next(iterator)\n",
-    "xs, ys, lens = sort_batch(xs, ys, lens)\n",
+    "print(lens.sort(dim=0, descending=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs, ys, lens = sort_batch(xs, ys, lens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "outputs = test_gru(xs, lens.cpu().numpy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.6764, -0.7102],\n",
+       "        [-1.0052, -0.4557],\n",
+       "        [-0.6076, -0.7867],\n",
+       "        [-0.6407, -0.7485],\n",
+       "        [-0.8402, -0.5650],\n",
+       "        [-0.7919, -0.6033],\n",
+       "        [-0.6016, -0.7940],\n",
+       "        [-0.6979, -0.6884],\n",
+       "        [-0.8093, -0.5891],\n",
+       "        [-0.8251, -0.5766],\n",
+       "        [-0.6350, -0.7549],\n",
+       "        [-0.4465, -1.0213],\n",
+       "        [-0.6437, -0.7451],\n",
+       "        [-0.6063, -0.7883],\n",
+       "        [-0.6381, -0.7514],\n",
+       "        [-0.6886, -0.6977]])"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([-0.6764, -0.4557, -0.6076, -0.6407, -0.5650, -0.6033, -0.6016,\n",
+       "         -0.6884, -0.5891, -0.5766, -0.6350, -0.4465, -0.6437, -0.6063,\n",
+       "         -0.6381, -0.6886]),\n",
+       " tensor([ 0,  1,  0,  0,  1,  1,  0,  1,  1,  1,  0,  0,  0,  0,\n",
+       "          0,  0]))"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.max(outputs, dim=1)"
+   ]
   },
   {
    "cell_type": "code",
